[package]
name = "grpc_gateway"
version = "0.1.4"
edition = "2024"
description = "A GRPC Gateway which handle the http request and convert into GRPC"
license = "MIT"

repository = "https://github.com/aniket0951/rust_grpc_gateway"
homepage = "https://github.com/aniket0951/rust_grpc_gateway"
documentation = "https://github.com/aniket0951/rust_grpc_gateway"
readme = "README.md"

[dependencies]
tonic = "0.14.1"
prost = "0.14.1"
tonic-prost = "0.14.1"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = true }
anyhow = "1.0.99"
prost-reflect = { version = "0.16.1", features = ["serde"] }
prost-types = "0.14.1"
bytes = "1.10.1"
tonic-reflection = "0.14.1"
tonic-web = "0.14.1"
lazy_static = "1.4"
actix-web = { version = "4.9.0", default-features = false, features = [
  "macros",
  "rustls",
] }
url = "2.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
jsonwebtoken = { version = "9", default-features = false }

chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.1"

[dev-dependencies]
uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"
